[gd_scene load_steps=13 format=2]

[ext_resource path="res://imagens/pixelCasinha.png" type="Texture" id=1]
[ext_resource path="res://Puzzle/Interface/Scenes/LoserScene/loserScene.gd" type="Script" id=2]
[ext_resource path="res://imagens/background vitoria.jpeg" type="Texture" id=3]
[ext_resource path="res://imagens/bordaCurta.png" type="Texture" id=4]
[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 17
font_data = ExtResource( 5 )

[node name="LoserScene" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.996078, 0.145098, 0.145098, 0.168627 )

[node name="BackgroundVitoria" type="Sprite" parent="."]
position = Vector2( 514.35, 299 )
scale = Vector2( 0.6138, 0.680912 )
texture = ExtResource( 3 )

[node name="BordaCurta" type="Sprite" parent="."]
position = Vector2( 628, 268.5 )
scale = Vector2( 4.69118, 1.11397 )
texture = ExtResource( 4 )

[node name="BordaCurta2" type="Sprite" parent="."]
position = Vector2( -592.149, 46 )
scale = Vector2( 2.65073, 1 )
texture = ExtResource( 4 )
offset = Vector2( 373.915, 266 )

[node name="BordaCurta3" type="Sprite" parent="."]
position = Vector2( -384.519, -14 )
scale = Vector2( 3.06985, 1 )
texture = ExtResource( 4 )
offset = Vector2( 364.03, 326 )

[node name="BordaCurta4" type="Sprite" parent="."]
position = Vector2( 572, 337 )
scale = Vector2( 2.54412, 1 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -368.0
margin_top = -134.5
margin_right = 368.0
margin_bottom = -33.5
custom_colors/font_color = Color( 0.913725, 0.0980392, 0.0352941, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "VocÃª errou um comando :(

Tente novamente para seguir 
para a fase 2"
align = 1
valign = 1

[node name="BordaCurta6" type="Sprite" parent="."]
position = Vector2( 557, 460 )
scale = Vector2( 2.00919, 1 )
texture = ExtResource( 4 )

[node name="btnRestart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 69.0
margin_right = 136.0
margin_bottom = 89.0
theme = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.913725, 0.219608, 0.0352941, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.913725, 0.219608, 0.0352941, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.988235, 0.521569, 0.0235294, 1 )
custom_fonts/font = SubResource( 7 )
text = "Reiniciar Fase 1"
icon_align = 1

[node name="PixelCasinha" type="Sprite" parent="."]
position = Vector2( 522, 484 )
scale = Vector2( 0.228395, 0.228395 )
texture = ExtResource( 1 )

[node name="btnMap" type="TextureButton" parent="PixelCasinha"]
margin_left = -162.0
margin_top = -162.0
margin_right = 162.0
margin_bottom = 162.0

[connection signal="pressed" from="btnRestart" to="." method="_on_btnRestart_pressed"]
[connection signal="pressed" from="PixelCasinha/btnMap" to="." method="_on_btnMap_pressed"]
